--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# Customs
+.env
+.env.*
+package-lock.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
